--- a/css/gioithieu.css
+++ b/css/gioithieu.css
@@ -17,3 +17,39 @@
 .sumenh h2{
     color: brown;
 }
+#video {
+    margin: 0 auto;
+    width: 800px;
+    text-align: center;
+}
+#video h1{
+    color: brown;
+}
+#player-container {
+    margin: 0 auto;
+    background-image: linear-gradient(brown, brown);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: 3px solid brown;
+    border-radius: 7px;
+}
+#controls {
+    margin-top: 6px;
+}
+button{
+    padding:8px 20px;
+    font-size: medium;
+    outline:none;
+    border:none;
+    border-radius:50px;
+    font-weight:bold;
+    background-color:white;
+    color:brown;
+    font-weight: bold;
+    /* box-shadow: inset 0 0 20px blue; */
+}
+button:hover{
+    color:white;
+    background-color: rgb(181, 145, 145);
+    font-weight: bold;
+}
