--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,27 @@
 /* body{
     background-color: rgb(193, 185, 185)  ;
 } */
+.mapbut {
+    display: flex;
+    justify-content: right;
+}
+.mapbut i {
+    padding-right: 5px;
+}
+.hotline {
+    padding-right: 30px;
+}
+.hotline a {
+    text-decoration: none;
+    color: brown;
+}
+.email {
+    padding-right: 30px;
+}
+.email a {
+    text-decoration: none;
+    color: brown;
+}
 
 .light {
     display: flex;
@@ -8,13 +29,19 @@
     align-items: center;
 }
 
-.light .form-group {
+/* .light .form-group {
     display: flex;
     gap: 0 20px;
     margin-right: 20px;
     cursor: pointer;
+} */
+.form-group {
+    text-decoration: none;
+    font-weight: 700;
+    display: flex;
+    cursor: pointer;
+    font-size: 15px;
 }
-
 .modal-sign-in {
     position: fixed;
     top: 0;
@@ -83,15 +110,16 @@
     animation: fadeIn 0.5s forwards;
     display: none;
 }
-.form-group p{
+.form-group p {
     color: white;
     background-color: brown;
     font-weight: bold;
 }
-.form-group p:hover{
+.form-group p:hover {
     color: brown;
     background-color: white;
     font-weight: bold;
+    cursor: pointer;
 }
 .modal-sign-up.active {
     display: flex;
@@ -130,21 +158,31 @@
     border: 1px solid brown;
     padding: 10px;
 }
+.big {
+    display: flex;
+    justify-content: right;
+}
+.big .form-group {
+    padding: 0px 10px;
+}
+
+/* menu */
 .table {
     background-color: brown;
     text-align: center;
-    border: 0.5px solid brown;
+    /* border: 0.5px solid brown; */
     position: sticky;
     top: 0;
     left: 0;
     z-index: 99999;
+    margin-top: -25px;
 }
 .table > ul > li {
     display: inline-block;
-    padding: 8px 10px;
-    font-size: 13px;
-    margin-left: 50px;
-    margin-right: 50px;
+    padding: 8px 8px;
+    font-size: 10px;
+    margin-left: 20px;
+    margin-right: 30px;
 }
 .table > ul > li > a {
     text-decoration: none;
@@ -152,9 +190,9 @@
     font-weight: bold;
     font-size: 17px;
 }
-.table > ul > li:hover {
+.table .hover :hover {
     background-color: rgb(155, 71, 71);
-    /* color: red; */
+    padding: 10px 0;
 }
 .table ul ul {
     position: absolute;
@@ -187,8 +225,71 @@
     color: white;
 }
 
+.bag-wrapper {
+    --ct--value--: "0";
+}
+
+.bag {
+    padding-top: 5px;
+    padding-left: 10px;
+}
+
+.bag i {
+    font-size: 50px;
+    color: brown;
+    position: relative;
+}
+.bag::before {
+    content: var(--ct--value--);
+    display: inline-block;
+    background-color: brown;
+    position: absolute;
+    font-size: 25px;
+    border-radius: 10px;
+    right: 6px;
+    z-index: 999;
+    color: white;
+    padding: 3px;
+}
+/* tìm kiếm */
+.search-big {
+    display: flex;
+    justify-content: right;
+    /* padding: 10px 0px; */
+}
+.search {
+    display: flex;
+    justify-content: right;
+    padding: 10px 0px;
+}
+#search-box {
+    display: flex;
+    /* border-radius: 50%; */
+}
+#search-box #search-text {
+    background-color: white;
+    border: 1px solid brown;
+    outline: none;
+    /* background: none; */
+    padding: 10px 15px;
+    font-size: 20px;
+    flex: 1;
+    /* border-radius: 10px 0 0 10px; */
+}
+#search-box #search-btn {
+    background-color: brown;
+    cursor: pointer;
+    border: none;
+    padding: 15px;
+    flex-shrink: 0;
+    /* border-radius: 0 10px 10px 0; */
+}
+#search-btn i {
+    color: white;
+}
+/*slider*/
 .slider {
-    max-width: 1400px;
+    max-width: 820px;
     margin: 10px auto;
     position: relative;
 }
@@ -247,7 +348,7 @@
 }
 .slider-wrapper {
     width: 100%;
-    height: 600px;
+    height: 400px;
     overflow: hidden;
     position: relative;
 }
@@ -278,7 +379,7 @@
 .footer {
     background-color: brown;
     color: white;
-    padding: 20px;
+    /* padding: 20px; */
     font-size: 17px;
 }
 .one {
@@ -290,12 +391,12 @@
 .one-nho {
     text-align: center;
 }
-p a{
+p a {
     text-decoration: none;
     color: white;
     font-weight: bold;
 }
 .main-iframe {
     width: 100%;
-    height: 2200px;
+    height: 2330px;
 }
