--- a/css/trangchu.css
+++ b/css/trangchu.css
@@ -11,7 +11,7 @@
     width: 22%;
     width: 300px;
     height: 370px;
-    box-shadow: 5px 5px 3px 3px brown;
+    /* box-shadow: 5px 5px 3px 3px brown; */
 }
 /* .small-rượu img:hover{
     box-shadow: 5px 5px 3px 3px brown;
